--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/underscore": "^1.10.4",
     "source-map-support": "^0.5.19",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "underscore": "^1.10.2"
   }
 }
