--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "outDir": "./built",
-        "target": "es6",
+        "target": "ES2016",
         "sourceMap": true,
         "declaration":true,
     },
