Tentando pôr o debugger a funcionar

--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
     "source-map-support": "^0.5.19",
     "typescript": "^3.9.5",
     "underscore": "^1.10.2"
-  }
+  },
+  "devDependencies": {}
 }
