Small changes to tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,12 @@
     "compilerOptions": {
         "outDir": "./built",
         "target": "ES2016",
+        "rootDir": "./src",
         "sourceMap": true,
         "declaration":true,
+        "moduleResolution": "node",
+        "module": "esnext",
+        "allowSyntheticDefaultImports": true
     },
     "include": [
         "./src"
