--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "built/**/*"
   ],
   "scripts": {
-    "start": "node ./built/index.js",
-    "test": "node ./built/tests/index.test.js",
+    "start": "node ./src/index.js",
+    "test": "nodemon ./built/tests/index.test.js",
     "build": "tsc --watch"
   },
   "author": "macholatino45",
@@ -21,5 +21,8 @@
     "typescript": "^3.9.5",
     "underscore": "^1.10.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/node": "^14.14.22",
+    "nodemon": "^2.0.7"
+  }
 }
